<resources>

    <!-- Campos del Onboarding -->
    <string name="app_name">Activiza</string>
    <string name="activiza">Activiza</string>
    <string name="siguiente">Siguiente</string>

    <!-- Campos de comprobacion de errores -->
    <string name="error">Error en el campo</string>
    <string name="none"></string>
    <string name="ganar_masa_muscular">Ganar masa muscular</string>
    <string name="perder_peso">Perder peso</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="comenzar">Comenzar</string>
    <string name="borrar_cookies">Borrar Cookies</string>

    <!-- Campos del menu de abajo -->
    <string name="entrenamientos">Entrenamientos</string>
    <string name="settings">Ajustes</string>
    <string name="feel">Comunidad</string>

    <!-- Campos del fragmento de la rutina pantalla de seleccion -->
    <string name="seleccionar_entrenamiento">Selecciona tu entrenamiento</string>
    <string name="rutinas_hombre">RUTINAS HOMBRE</string>

    <!-- Campos del fragmento de la rutina pantalla de rutina -->
    <string name="plan_de_entrenamiento">Plan de entrenamiento</string>
    <string name="categorias">Categorías:</string>

    <!-- Campos del login y registro-->
    <string name="nombre_app">Activiza</string>
    <string name="signin">Sign In</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="acces_google">Acount Google</string>
    <string name="reset_password">Forgot password?</string>
    <string name="create_account">¿No tienes cuenta?</string>
    <string name="register">Register</string>
    <string name="signup">Sign Up</string>
    <string name="content_description">a</string>
    <string name="username">Username</string>
    <string name="btn_continue">Continue</string>
    <string name="signin_sub"><u>Sign In</u></string>
    <string name="signup_sub"><u>Sign Up</u></string>
    <string name="btn_register">Sign Up</string>
    <string name="descripcion_notificacion">Activa las notificaciones para que te avisemos de tus entrenamientos</string>

    <!-- Campos anadir rutina -->
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="agregar">Agregar</string>
    <string name="panel_de_control">Panel de control</string>
    <string name="siguiente_entrenamiento">Siguiente entrenamiento:</string>
    <string name="eliminar_rutina">Eliminar rutina</string>
    <string name="comenzar_entrenamiento">Comenzar Entrenamiento</string>
    <string name="no_tienes_cuenta">¿Aún no tienes cuenta?</string>
    <string name="google">Google</string>
    <string name="ejercicio">Ejercicio</string>
    <string name="comenzar_rutina">Comenzar rutina</string>
    <string name="no">NO</string>
    <string name="repeticiones">Repeticiones</string>
    <string name="descanso">Descanso</string>
    <string name="minutos">Minutos</string>
    <string name="completar">Completar</string>
    <string name="cual_es_tu_genero">¿Cual es tu genero?</string>
    <string name="cual_es_tu_altura">¿Cual es tu altura?</string>
    <string name="nombre">Nombre</string>
    <string name="anadir_rutina">Añadir Rutina</string>
    <string name="genero">Genero</string>
    <string name="objetivo">Objetivo</string>
    <string name="add_genero">"H -hombre, M - mujer"</string>
    <string name="add_lugar">C - casa, G - gimnasio</string>
    <string name="add_objetivo">GRASA para perdida, \nMUSCULO para ganancia</string>
    <string name="add_duracion">Días de duración</string>
    <string name="instrucciones_rutina">*Genero (H para hombre, M para mujer)\n*Objetivo (GRASA para perder grasa, MUSCULO para ganar músculo)\n*Lugar de entrenamiento (C para casa, G para gimnasio)\n*Duración añade los días que dura la rutina solo número entero</string>
    <string name="rutina">Rutina</string>
    <string name="descripcion">Descripción:</string>
    <string name="ejercicios">Ejercicios:</string>
    <string name="subir_imagen_rutina">Subir Imagen Rutina:</string>
    <string name="nombre_de_lo_que_quieres_la_imagen">nombre de lo que quieres la imagen</string>
    <string name="_10">10</string>
    <string name="lugar">Lugar</string>
    <string name="selecciona_una_imagen">Selecciona una Imágen</string>
    <string name="ejercicios_title">Ejercicios</string>
    <string name="duracion">Duracion</string>
    <string name="modificar_rutina">modificar rutina</string>
    <string name="acabar_rutina">Acabar rutina</string>

    <!-- Settings-->
    <string name="titulo_settings">Ajustes de la cuenta</string>
    <string name="cuenta">Mi cuenta</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="notificaciones">Activar notificaciones</string>
    <string name="volumen">Ajustar volumen</string>
    <string name="vibracion">Activar vibración</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="mostrar_qr">Mostrar QR</string>
    <string name="perfil">Perfil</string>
    <string name="descripcion_modo_oscuro">Activa o desactiva el modo oscuro para cambio visual</string>

    <!--Perfil-->
    <string name="reset_values"><u>Resetear peso/altura</u></string>
    <string name="btn_imc">Imc</string>
    <string name="peso">Peso:</string>
    <string name="altura">Altura:</string>
    <string name="imc">Imc:</string>
    <string name="saludo">Hola</string>

    <!-- Feels -->
    <string name="user_image">User Image</string>
    <string name="type_message">Type a message</string>
    <string name="send_message">Send Message</string>
    <string name="nombre_usuario">nombre_usuario</string>


    <string name="channel_description">This is my notification channel.</string>
    <string name="casa">Casa</string>
    <string name="gimnasio">Gimnasio</string>
</resources>