<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.login.LoginActivity">

    <ImageView
        android:layout_width="168dp"
        android:layout_height="131dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_app_3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/activiza"
       android:fontFamily="@font/butler_bold_stencil"
        android:textAllCaps="true"
        android:textColor="@color/image_color"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/signin"
        android:textSize="19sp"
        android:fontFamily="@font/butler_bold_stencil"
        android:textColor="@color/primary_color"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

        <requestFocus />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"/>


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="48dp"
        app:cardBackgroundColor="@color/primary_color">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/signin"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="22sp"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_reset_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/reset_password"
        android:textColor="@color/gray_line"
        android:textSize="14sp"
        android:layout_marginEnd="25dp"
        android:layout_gravity="end"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_google_24"
        android:scaleType="centerCrop"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/google"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical|center">

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:text="@string/no_tienes_cuenta"
            android:textColor="@color/gray_line"
            android:textSize="14sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/primary_color"
            android:textSize="14sp"/>
    </LinearLayout>



</LinearLayout>