<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.Onboarding2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <View
            android:id="@+id/viewOrangeLine"
            android:layout_width="0dp"
            android:background="@color/splash_background"
            android:layout_height="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            />
        <View
            android:id="@+id/viewGrayLine"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:background="@color/gray_line"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_marginVertical="20dp"
        android:text="@string/activiza"
        />
    <TextView
        android:id="@+id/tvPresentacionOnboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"
        tools:text="¿Ya veo Nestor Un placer conocerte quieres decirnos cual es tu meta?"
        />

        <RadioGroup
            android:id="@+id/rgObjetivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            >

            <RadioButton
                android:id="@+id/rbGanarMasa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ganar_masa_muscular" />

            <RadioButton
                android:id="@+id/rbPerderPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perder_peso" />

        </RadioGroup>
    <TextView
        android:id="@+id/tvGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"
        android:text="¿Cual es tu genero?"
        />

    <RadioGroup
        android:id="@+id/rgPersona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        >

        <RadioButton
            android:id="@+id/rbHombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hombre" />

        <RadioButton
            android:id="@+id/rbMujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mujer" />

    </RadioGroup>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:text="@string/siguiente"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>