<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragmentos.EntrenamientosFragment"
    android:id="@+id/fragment_rutinas"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/seleccionar_entrenamiento"
            android:gravity="center"
            android:layout_marginVertical="20dp"
            />
        <HorizontalScrollView
            android:id="@+id/hsvSubMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/btnPanelDeControl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/panel_de_control"
                    android:layout_marginEnd="10dp"
                    />
                <Button
                    android:id="@+id/btnEntrenamientos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entrenamientos"
                    android:layout_marginStart="10dp"
                    />
                <Button
                    android:id="@+id/btnEliminarRutina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eliminar_rutina"
                    android:layout_marginStart="10dp"
                    />
            </LinearLayout>
        </HorizontalScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/tvRutinaName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rutinas_hombre"
            android:layout_marginVertical="20dp"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            />
            <ImageView
                android:id="@+id/ivArrow"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_arrow_down"
                android:layout_marginEnd="10dp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            android:layout_marginBottom="10dp"
            />
        <ProgressBar
            android:id="@+id/pbCargaRutina"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRutinas"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            />
    </LinearLayout>

</FrameLayout>