<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragmentos.RutinaIDFragment"
    android:id="@+id/fragment_rutina_id"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginVertical="20dp"
            android:text="@string/plan_de_entrenamiento"
            />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        >
        <ImageView
            android:id="@+id/ivRutinaItem"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:src="@drawable/ic_prueba_fondo"
            android:scaleType="centerCrop"
            android:alpha="0.5"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/splash_background"
            android:scaleType="centerCrop"
            android:alpha="0.5"
            />
        <TextView
            android:id="@+id/tvNameRutina"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:text="Nombre de la rutina"
            />
    </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/tvDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:text="Descripción de la rutina como por ejemplo una pequeña y breve descripcion de lo que vamos a hacer"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/categorias"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            />
            <TextView
                android:id="@+id/tvCategorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="Para hombres, mujeres y niños"
                android:textColor="@color/splash_background"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            />
        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="300dp"
            android:layout_marginTop="40dp"
            android:padding="15dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/agregar"
            android:textAllCaps="true"
            />
    </LinearLayout>
</FrameLayout>